# cookiecutter-django

./: .gitignore  README.md  cookiecutter.json
.github/: FUNDING.yml
.github/workflows/: cd.yml
directory_name/: .gitignore  README.md  manage.py  secrets-example.json
directory_name/config/: asgi.py  urls.py  wsgi.py
directory_name/config/settings/: base.py  development.py
directory_name/directory_name/templates/: base.html
directory_name/requirements/: base.txt
hooks/: post_gen_project.py  pre_gen_project.py.py
{{cookiecutter.directory_name}}/: AUTORS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml
{{cookiecutter.directory_name}}/.github/workflows/: django-test.yml
{{cookiecutter.directory_name}}/apps/accounts/: admin.py  apps.py  models.py  urls.py
{{cookiecutter.directory_name}}/apps/accounts/migrations/: 0001_initial.py
{{cookiecutter.directory_name}}/apps/core/: apps.py  models.py
{{cookiecutter.directory_name}}/config/: asgi.py  urls.py  wsgi.py
{{cookiecutter.directory_name}}/config/settings/: base.py  develop.py  development.py  production.py
{{cookiecutter.directory_name}}/requirements/: base.txt  develop.txt  production.txt  staging.txt  test.txt
