[tool.poetry]
name = "{{cookiecutter.directory_name}}"
version = "0.1.0"
description = "{{cookiecutter.short_description}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
license = "{{cookiecutter.license}}"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2"
Pillow = "^9.2"
psycopg2-binary = "^2.9.5"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
{%- if cookiecutter.coverage == 'yes' %}
coverage = "^6.5"
{% endif %}
{%- if cookiecutter.black == 'yes' -%}
black = "^22.10"
{%- endif %}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
