[tool.poetry]
name = "{{cookiecutter.directory_name}}"
version = "0.1.0"
description = "{{cookiecutter.short_description}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
license = "{{cookiecutter.license}}"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2"
Pillow = "^10.2"
psycopg2-binary = "^2.9"
gunicorn = "^21.2"

[tool.poetry.dev-dependencies]
{%- if cookiecutter.coverage == 'yes' %}
coverage = "^7.4"
{% endif %}
{%- if cookiecutter.black == 'yes' -%}
black = "^24.2"
{%- endif %}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
